# TAF

./: .gitignore  .gitleaks.toml  .gitmodules  .jscpd.json  .pre-commit-config.yaml  .project  .pydevproject  .vulture_whitelist.py  AGENTS.md  LICENSE  Makefile  README.md  TestInput.py  build.gradle  jython.logging.conf  logging.conf  pyproject.toml  requirements-dev.txt  requirements.txt  test.conf  testrunner.py
.claude/: settings.json
.claude/skills/: skill-index.md
.factory/droids/: fusion.md
.factory/skills/: skill-index.md
.github/: dependabot.yml
.github/workflows/: code-quality.yml  validate-agents-md.yml
agents/: AGENTS.md  fusion.md
agents/skills/: AGENTS.md  source-attribution.md  test_debugging.md
b/: testdata.json
b/resources/: 1-node-template.ini  2-nodes-n1ql-template.ini  2-nodes-template.ini  3-nodes-template.ini  4-nodes-n1ql-index-template.ini  4-nodes-n1ql-template.ini  4-nodes-template-KV.ini  4-nodes-template-cbas.ini  4-nodes-template-n1ql.ini  4-nodes-template-sanity.ini  4-nodes-template.ini  5-nodes-bkrs-2clusters.ini  5-nodes-n1ql-index-template.ini  5-nodes-template.ini  6-nodes-template-cbas.ini  6-nodes-template-n1ql.ini  6-nodes-template-xdcr.ini  6-nodes-template.ini  7-nodes-template.ini  dev-3-nodes.ini  dev-6-nodes.ini  luks-nodes.ini
bulk_doc_operations/: pom.xml
conf/: py-newfailover.conf  py-security_test.conf  rebalance_in.conf  rebalance_in_out.conf  rebalance_out.conf  sanity.conf
conf/2i/: cgroups_gsi.conf  durability_aborts.py
conf/Atomicity/: basic.conf  concurrency_basic.conf  crash_test.conf  diff_doc_size.conf  doc_isolation.conf  hooks_basic.conf  multi_bucket_basic.conf  param_update.conf  time_drift.conf  transaction_basic.conf
conf/N1qlTransaction/: basic.conf  basic_ephemeral.conf  bucket_param.conf  collections_failover_crud_on_collections.conf  collections_rebalance_with_N1ql_txn.conf  concurrency.conf  concurrency_multiple_query_nodes.conf  different_services.conf  memory_quota.conf  misc_test.conf  multi_bucket.conf  negative_testcase.conf  os_certify_txns.conf  process_crash.conf  queries_use_keys.conf  test_with_kvtimeout.conf  test_with_prepare.conf  txn_durability_level.conf
conf/backup_restore/: WORM_backup.conf  collections_drop_recreate_rebalance.conf  collections_network_split.conf  collections_quorum_loss.conf  collections_rebalance.conf  collections_ttl.conf  continuous_backup_cluster_ops_test.conf  continuous_backup_retention_test.conf  continuous_backup_test.conf  dynamic_service_provision_tests.conf  flush_test.conf  simple_test.conf
conf/bucket/: bucket_level_durability.conf  bucket_state.conf  compaction.conf  dgm.conf  limits-connections.conf  limits-data-size.conf  limits-egress.conf  limits-ingress.conf  limits-ops.conf  limits.conf  max_ttl.conf  multi_bucket.conf  multi_bucket_multi_durability.conf  replica_update.conf  settings_update.conf
conf/bucket_setting/: settings_update.conf
conf/capella/: alert-v4-APIs.conf  allowedCIDR-v4-APIs.conf  appServiceLogStreaming.conf  appServicesOnOff.conf  (+24 more)
connections/: Java_Connection.py  Rest_Connection.py  mode.py
couchbase_utils/: AGENTS.md
doc_operations_sdk3/: .project  pom.xml
docs/: architecture.agents.md  architecture.humans.md
lib/: backup_service.py  cluster_run_manager.py  common_lib.py  couchbase_cli.py  dcp_bin_client.py  gcs.py  global_vars.py  mc_ascii_client.py  mc_bin_client.py  memcacheConstants.py  n1ql_exceptions.py  nfs.py  sdk_client.py  sdk_client3.py  sdk_exceptions.py  security_config.py  sirius_client.py  table_view.py  test_summary.py  testconstants.py
pytests/: basetestcase.py  cb_basetest.py  columnarbasetest.py  columnarbasetestcase.py  dedicatedbasetestcase.py  goldfishbasetest.py  kmip_config.json  newtuq.py  onCloud_basetestcase.py  onPrem_basetestcase.py  serverlessbasetestcase.py  throttling_helper.py
scripts/: MB-71423_truncate_preallocation.sh  ServerPoolMachinesHealth.py  check_metastore.sh  check_vulnerable_vbuckets.sh  collect_server_info.py  delete_s3_buckets.py  eagles_all_around.py  executor_script.sh  executor_script_cloud.sh  find_rerun_job.py  get_jenkins_params.py  getcoredumps.py  install.py  install_constants.py  install_utils.py  json_to_parquet.py  jython_install.sh  merge_reports.py  old_install.py  populateIni.py  rerun_jobs.py  ssh.py  start_cluster_and_run_tests.sh  testDispatcher.py
sdk3.0/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
transactions/: .classpath  .project  pom.xml
unit_tests/: __init__.py  test_framework_units.py
(+2414 files in other folders)
