[project]
name = "taf"
version = "1.0.0"
description = "Test Automation Framework for Couchbase Server and Capella"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".jython_cache",
    "build",
    "dist",
    "*.egg-info",
    "DocLoader",
    "sirius",
    "lib/capellaAPI",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "N",   # pep8-naming conventions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "SIM102", # use a single if statement
    "SIM114", # combine if branches
    "N806",   # variable name should be lowercase (allow mixedCase for compatibility)
    "N803",   # argument name should be lowercase (allow mixedCase for compatibility)
]

[tool.ruff.lint.pep8-naming]
# Allow Pytest-style fixtures and UnitTest compatibility
extend-ignore-names = ["setUp", "tearDown", "setUpClass", "tearDownClass"]

[tool.ruff.lint.isort]
known-first-party = ["lib", "pytests", "couchbase_utils", "platform_utils", "constants"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
