[project]
name = "taf"
version = "1.0.0"
description = "Test Automation Framework for Couchbase Server and Capella"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".jython_cache",
    "build",
    "dist",
    "*.egg-info",
    "DocLoader",
    "sirius",
    "lib/capellaAPI",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "N",   # pep8-naming conventions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "SIM102", # use a single if statement
    "SIM114", # combine if branches
    "N806",   # variable name should be lowercase (allow mixedCase for compatibility)
    "N803",   # argument name should be lowercase (allow mixedCase for compatibility)
]

[tool.ruff.lint.pep8-naming]
# Allow Pytest-style fixtures and UnitTest compatibility
extend-ignore-names = ["setUp", "tearDown", "setUpClass", "tearDownClass"]

[tool.ruff.lint.isort]
known-first-party = ["lib", "pytests", "couchbase_utils", "platform_utils", "constants"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# Type checking configuration (gradual typing for existing codebase)
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Allow existing non-typed code to pass
allow_untyped_defs = true
allow_incomplete_defs = true
allow_untyped_calls = true
allow_untyped_decorators = true
ignore_missing_imports = true

# Don't enforce strict checks on existing code
strict_optional = false
check_untyped_defs = false

# Exclude submodules and generated code
exclude = [
    "DocLoader",
    "sirius",
    "lib/capellaAPI",
    "build",
    "dist",
    "__pycache__",
]
